<resources>
    <string name="app_name">Eco Challenges</string>
    <string name="imagen_logo">EcoLogo</string>
    <string name="default_web_client_id">627034487766-a2ra0pg3p4jadfu72a23pubbtpr8hlgr.apps.googleusercontent.com</string>
    <string name="reto">DESAFÍO 1</string>
    <string name="completado">COMPLETADO</string>
    <string name="_1_primer_reto">RETO 1</string>
    <string name="_2_segundo_reto">RETO 2</string>
    <string name="_3_tercer_reto">RETO 3</string>
    <string name="reto_x">Reto X</string>
    <string name="reto_mensaje">¡Regístrate y sé parte del cambio!</string>
    <string name="todo">TODO</string>
    <string name="todoimg">TODO</string>
    <string name="copa_desc">TODO</string>
    <string name="todoimg1">TODO</string>
    <string name="toolbar">ECO CHALLENGE</string>
</resources>