<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="ECO CHALLENGES"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/frase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="JUNTOS POR UN MUNDO MEJOR"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="276dp"
        android:layout_height="231dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/imagen_logo"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegisterPapa"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="La tierra, nuestra casa, parece convertirse cada vez más en un inmenso depósito de porquería.                          (Laudato Si - 2015, Papa Francisco)"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/tvRegisterMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        tools:ignore="HardcodedText,TextSizeCheck" />


    <!-- Flecha Izquierda -->

    <!-- Flecha Derecha -->

    <TextView
        android:id="@+id/tvRegisterMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/reto_mensaje"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterPapa" />

    <ImageView
        android:id="@+id/flechaIzquierda"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/todoimg"
        android:src="@drawable/izquierda"
        app:layout_constraintBottom_toBottomOf="@id/btnGoogle"
        app:layout_constraintEnd_toStartOf="@id/btnGoogle"
        app:layout_constraintTop_toTopOf="@id/btnGoogle"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/flechaDerecha"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/derecha"
        app:layout_constraintBottom_toBottomOf="@id/btnGoogle"
        app:layout_constraintStart_toEndOf="@id/btnGoogle"
        app:layout_constraintTop_toTopOf="@id/btnGoogle"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterMessage"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>